--- a/Index.html
+++ b/Index.html
@@ -6,81 +6,100 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <title>Document</title>
-<<<<<<< HEAD
   </head>
   <body>
     <div id="main">
-      <h1 class="title">Diego Maradona</h1>
+      <div class="title-cls"><h1 class="title">Diego Maradona</h1></div>
       <div class="img-div">
         <img src="maradona.jpg" alt="This is maradona" />
-       
       </div>
       <p class="title-disc">
         Diego Armando Maradona (Spanish: [ˈdjeɣo maɾaˈðona]; 30 October 1960 –
-        25 November 2020) was an Argentine professional football player and <br>
-        manager. <br> Widely regarded as one of the greatest players in the history
-        of the sport, he was one of the two <br> joint winners of the FIFA Player of
-        the 20th Century award.[3][4] Maradona's vision, passing, ball control,<br>
-        and dribbling skills were combined with his small stature, which gave <br>
-        him a low centre of gravity allowing him to manoeuvre better than most <br>
-        other players. His presence and leadership on the field had a great <br>
-        effect on his team's general performance, while he would often be <br>
-        singled out by the opposition. In addition to his creative abilities, <br> he
-        possessed an eye for goal and was known to be a free kick specialist. <br> A
-        precocious talent, Maradona was given the nickname "El Pibe de Oro"
-        ("The Golden Boy"), <br> a name that stuck with him throughout his career. <br>
+        25 November 2020) was an Argentine professional football player and
+        <br />
+        manager. <br />
+        Widely regarded as one of the greatest players in the history of the
+        sport, he was one of the two <br />
+        joint winners of the FIFA Player of the 20th Century award.[3][4]
+        Maradona's vision, passing, ball control,<br />
+        and dribbling skills were combined with his small stature, which gave
+        <br />
+        him a low centre of gravity allowing him to manoeuvre better than most
+        <br />
+        other players. His presence and leadership on the field had a great
+        <br />
+        effect on his team's general performance, while he would often be <br />
+        singled out by the opposition. In addition to his creative abilities,
+        <br />
+        he possessed an eye for goal and was known to be a free kick specialist.
+        <br />
+        A precocious talent, Maradona was given the nickname "El Pibe de Oro"
+        ("The Golden Boy"), <br />
+        a name that stuck with him throughout his career. <br />
         He also had a troubled off-field life and was banned in both 1991 and
         1994 for abusing drugs
       </p>
-    
-        <h2>Notable Events After His Death
-        </h2>
-      <ul>
-        <li>
-          In a statement on social media, the Argentine Football Association
-          expressed <br> "its deepest sorrow for the death of our legend", adding:
-          "You will always be in our hearts."
-          <br> President Alberto Fernández
-          announced three days of national mourning.
-        </li>
-        <li>
-          UEFA and CONMEBOL announced that every match in the Champions League, <br>
-          Europa League, Copa Libertadores, and Copa Sudamericana would hold a
-          UEFA and CONMEBOL announced that every match in the Champions League, <br>
-          moment of silence prior to kickoff.  Boca Juniors' game was postponed
-          UEFA and CONMEBOL announced that every match in the Champions League, <br>
-          in respect to Maradona. Subsequently,  other confederations around the
-          UEFA and CONMEBOL announced that every match in the Champions League, <br>
-          UEFA and CONMEBOL announced that every match in the Champions League, <br>
-          world followed suit, with every fixture observing a minute of silence, 
-          starting with the 2020 AFC Champions League's fixtures.
-        </li>
-        <li>
-          In addition to the minute of silence in Serie A, an image of Maradona
-          UEFA and CONMEBOL announced that every match in the Champions League, <br>
-          UEFA and CONMEBOL announced that every match in the Champions League, <br>
-          was projected on stadium  screens in the 10th minute of play. 
-        </li>
-        <li>
-          UEFA and CONMEBOL announced that every match in the Champions League, <br>
-          In Naples, the Stadio San Paolo—officially renamed Stadio Diego 
-          Armando Maradona on 4 December 2020—was illuminated at night in honour <br>
-          UEFA and CONMEBOL announced that every match in the Champions League, <br>
-          of Maradona, with numerous fans gathering outside the stadium placing
-          mural <br>
-        </li>
-      </ul>
+
+      <h2>Notable Events After His Death</h2>
+      <div class="list-div">
+        <ul>
+          <li>
+            In a statement on social media, the Argentine Football Association
+            expressed <br />
+            "its deepest sorrow for the death of our legend", adding: "You will
+            always be in our hearts." <br />
+            President Alberto Fernández announced three days of national
+            mourning.
+          </li>
+          <li>
+            UEFA and CONMEBOL announced that every match in the Champions
+            League, <br />
+            Europa League, Copa Libertadores, and Copa Sudamericana would hold a
+            UEFA and CONMEBOL announced that every match in the Champions
+            League, <br />
+            moment of silence prior to kickoff. Boca Juniors' game was postponed
+            UEFA and CONMEBOL announced that every match in the Champions
+            League, <br />
+            in respect to Maradona. Subsequently, other confederations around
+            the UEFA and CONMEBOL announced that every match in the Champions
+            League, <br />
+            UEFA and CONMEBOL announced that every match in the Champions
+            League, <br />
+            world followed suit, with every fixture observing a minute of
+            silence, starting with the 2020 AFC Champions League's fixtures.
+          </li>
+          <li>
+            In addition to the minute of silence in Serie A, an image of
+            Maradona UEFA and CONMEBOL announced that every match in the
+            Champions League, <br />
+            UEFA and CONMEBOL announced that every match in the Champions
+            League, <br />
+            was projected on stadium screens in the 10th minute of play.
+          </li>
+          <li>
+            UEFA and CONMEBOL announced that every match in the Champions
+            League, <br />
+            In Naples, the Stadio San Paolo—officially renamed Stadio Diego
+            Armando Maradona on 4 December 2020—was illuminated at night in
+            honour <br />
+            UEFA and CONMEBOL announced that every match in the Champions
+            League, <br />
+            of Maradona, with numerous fans gathering outside the stadium
+            placing mural <br />
+          </li>
+        </ul>
+      </div>
       <div class="ending-text">
-          <i>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br>
-             Error, beatae. Similique labore architecto quasi, animi laborum accusantium,<br> quae rem distinctio sunt harum, laboriosam eveniet voluptates autem ex. <br> Rem, quisquam ducimus?</i>
+        <i
+          >"Maradona is a God to the people of Naples. Maradona changed history.
+          In 80 years, we had always suffered, fighting against relegation, yet
+          in seven seasons with him we won two leagues, a UEFA Cup, two Italian
+          Cups. I'm a fan too and to live those years with Maradona was
+          incredible." -- Naples native Fabio Cannavaro, who was in the youth
+          ranks at Napoli when Maradona was there and later won the World Cup
+          with Italy in 2006.
+        </i>
       </div>
     </div>
   </body>
-=======
-</head>
-<body>
-    <h1>Hello world!</h1>
-    <p>We are software developers!</p>
-</body>
->>>>>>> 6d11bbce2935fb741148a3a3cdd3a296cdc4de17
 </html>
